--- a/Main.ipynb
+++ b/Main.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1df74a74",
+   "id": "09ad8f86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,21 +21,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d087cdad",
+   "id": "66a7e1f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://github.com/Roista57/VITS.git"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7a919e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd VITS\n",
+    "%cd /workspace/VITS\n",
     "!pip install torch==1.13.1 torchvision==0.14.1 torchaudio==0.13.1 --index-url https://download.pytorch.org/whl/cu117\n",
     "!pip install -r requirements.txt"
    ]
@@ -43,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23f69af5",
+   "id": "6371bb52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3bf5670",
+   "id": "87aa881d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20ea697a",
+   "id": "730b8f36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8425fd75",
+   "id": "01aabbce",
    "metadata": {},
    "outputs": [],
    "source": [
