--- a/Main.ipynb
+++ b/Main.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09ad8f86",
+   "id": "af4c8dcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66a7e1f1",
+   "id": "ebd1d8a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6371bb52",
+   "id": "8c5e969d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"\"\n",
+    "token = url.split('/')[5]\n",
+    "gdown token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "051e3be1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!unzip -q filelists.zip -d ./filelists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "788d17ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87aa881d",
+   "id": "c47976b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "730b8f36",
+   "id": "a8b8fe2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01aabbce",
+   "id": "83e889d4",
    "metadata": {},
    "outputs": [],
    "source": [
